change and add new mtrics
