# Robots/internal/dto/changeType.go
@@ -1,0 +1,6 @@
+package dto
+
+type ChangeTypeDTO struct {
+	ID   int    `json:"id"`
+	Type string `json:"type"`
+}
